# shipay-challenge

./: README.md
question_5/: .dockerignore  .editorconfig  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.env  docker-compose.yml  pyproject.toml
question_5/src/: main.py
question_5/src/application/: exceptions.py  security.py
question_5/src/application/schemas/: __init__.py  user.py
question_5/src/application/use_cases/: create_user.py
question_5/src/domain/: __init__.py  unit_of_work.py
question_5/src/domain/entities/: __init__.py  role.py  user.py
question_5/src/domain/repositories/: __init__.py  repository_port.py  role_repository_port.py  user_repository_port.py
question_5/src/infrastructure/: config.py  logging.py
question_5/src/infrastructure/persistence/: database.py
question_5/src/presentation/: __init__.py  deps.py
question_5/src/presentation/endpoints/: __init__.py  health.py  users.py
question_5/tests/: conftest.py
question_5/tests/e2e/: conftest.py  test_create_user_e2e.py
question_5/tests/integration/: conftest.py  test_base_repository_integration.py  test_health_endpoint.py  test_role_repository_integration.py  test_sqlalchemy_unit_of_work_async_integration.py  test_user_claim_relationships.py  test_user_repository_integration.py  test_users_endpoint.py
question_5/tests/unit/: test_base_repository.py  test_create_user_concurrency.py  test_main.py  test_role_repository.py  test_sqlalchemy_unit_of_work.py  test_user_repository.py  test_user_schema.py  test_user_service.py  test_utils.py
(+17 files in other folders)
