[tool.poetry]
name = "shipay-challenge"
version = "0.1.0"
description = "Shipay service for user creation"
authors = ["Bruno Fagundes"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.1"
uvicorn = { version = "^0.40.0", extras = ["standard"] }
SQLAlchemy = "^2.0.46"
pydantic = { version = "^2.12.5", extras = ["email"] }
alembic = "^1.14.0"
pydantic-settings = "^2.12.0"
psycopg2-binary = "2.9.10"
pwdlib = {version = "^0.2.0", extras = ["argon2"]}
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
structlog = "^24.4.0"
orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"
flake8 = "^7.3.0"
pytest-xdist = "^3.8.0"
pytest-clarity = "^1.0.1"
flake8-pyproject = "^1.2.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
  "*/__init__.py",
  "*/conftest.py",
  "*/alembic/*",
  "*/presentation/deps.py",
  "*/infrastructure/config.py",
  "*/infrastructure/persistence/database.py",
  "*/application/exceptions.py",
  "*/infrastructure/logging.py",
]

[tool.coverage.html]
directory = "reports/coverage"

[tool.ruff]
line-length = 119

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 119

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
